--- a/home-lab/_posts/2021-06-20-Unraid.markdown
+++ b/home-lab/_posts/2021-06-20-Unraid.markdown
@@ -22,7 +22,7 @@ It is ...
 
 ![Machine Booting](/assets/homelab/unraid-system-boot.gif)
 
-Booting up a machine is not something anyone would do every day. However, it showed how the NAS and server parts of the system seamlessly run behind the scene and hidden. Apart from taking longer to boot ( 2 minutes ), there are no significant differences between this machine and one with regular installation.
+Booting up a machine is not something anyone would do every day. However, it showed how the NAS and server parts of the system are seamlessly run behind the scene and hidden. Apart from the system taking longer to boot ( 2 minutes ), there are no significant differences between this machine and one with regular Windows installation.
 
 The theme of seamless integration continues with connecting peripherals to the system. Keyboard and mice are connected via built-in USB hub from the monitor, and they are plug and play just like a regular machine would do. Onboard WiFi and Bluetooth connectivity are available in the system as expected and I can connect to wireless headphone without any issues.
 
@@ -31,6 +31,18 @@ Even with 3 hard drives in the system and many applications running in the backg
 To most people, it is just another regular full tower PC.
 
 ## Unraid OS `2-core CPU`
+
+```bash
++-----------------+ +--------------------------------------+ +-----------+  
+|                 | |                                      | |           |  
+|  Ubuntu Server  | |       Windows / Linux (Dev)          | |   Docker  |  
+|                 | |                                      | |           |  
++-----------------+ +--------------------------------------+ +-----------+  
++------------------------------------------------------------------------+  
+|                                                                        |  
+|                                   Unraid                               |  
++------------------------------------------------------------------------+  
+```
 
 The whole seamless experience was made possible by [Unraid](https://unraid.net/). It is a light weight linux OS installed on a USB flash drive. It has support of building large storage array, built-in Docker and Virtual Machine ( VM ).
 
@@ -42,7 +54,7 @@ Unraid is not a new product and the "N Workstations, 1 CPU" concept has been pro
 2. [Official Support of Nvidia GeForce GPU Passthrough for Windows Virtual Machine](https://nvidia.custhelp.com/app/answers/detail/a_id/5173)
 3. [Strong Community, such as Spanceinvader One](https://www.youtube.com/channel/UCZDfnUn74N0WeAPvMqTOrtA)
 
-Unraid is free to try, so you can make sure the software is compatible with the hardware before purchase. At the time of writing, the Pro license with unlimited attached storage is USD$129. I think it is well worth the investment for getting the most of the machine. If cost is a concern, there are free options available in the market, such as [TrueNAS](https://www.truenas.com/), which apparently a good alternative as well.
+Unraid is free to try, so you can make sure the software is compatible with the hardware before purchase. At the time of writing, the Pro license with unlimited attached storage is USD$129. I think it is well worth the investment for getting the most out of the machine. If cost is a concern, there are free options available in the market, such as [TrueNAS](https://www.truenas.com/), which apparently a good alternative as well.
 
 As a first time Unraid user, the Unraid OS is very easy to setup too. It was a weekend project for me, but I found it might be even a touch easier for installing Windows, because there is no need to prepare a USB installation disk.
 
@@ -97,10 +109,9 @@ In my option, this is also the place where the word "virtual" start to become ph
 
 > Note: For the initial test, I have pass-through my existing Linux installation on a NVMe SSD, and the system booted perfectly.
 
-There are some leaky abstractions[^2] though, where some usb ports cannot pass-through because one of the port being used by Unraid. Thankfully,  
-[an Unraid community plugin ( LIBVIRT HOT PLUGIN USB )](https://forums.unraid.net/topic/70001-libvirt-hot-plugin-usb-usb-hot-plugin-for-vms/?tab=comments#comment-640678) make it so that, only an additional step is needed after plugging in the USB device.
+There are some leaky abstractions[^2] though, where some usb ports cannot pass-through because one of the port being used by Unraid. Thankfully, [an Unraid community plugin ( LIBVIRT HOT PLUGIN USB )](https://forums.unraid.net/topic/70001-libvirt-hot-plugin-usb-usb-hot-plugin-for-vms/?tab=comments#comment-640678) make it so that only an additional step is needed after plugging in the USB device.
 
-For the choice of operating systems, I have both Windows and Linux VMs installed, and I can switch between them easily. Because the OS is in a virtual environment, I could add an extra graphics card and have both system running at the same time ( i.e. 4-core CPU, 16GB Memory each ). Alternatively, I could spin up 4 instances of mini Ubuntu Server ( 1-core CPU, 8GB Memory ) for learning [Kubernetes](https://kubernetes.io/).
+For the choice of operating systems, I have both Windows and Linux VMs installed, and I can switch between them easily. Because the OS is in a virtual environment, I could add an extra graphics card and have both system running at the same time ( i.e. 4-core CPU, 16GB Memory each ). Alternatively, I could the other half of the resource to spin up 4 mini instances of Ubuntu Server ( 1-core CPU, 8GB Memory ) for learning [Kubernetes](https://kubernetes.io/).
 
 ## Conclusion
 
