--- a/home-lab/_drafts/2021-07-02-PopOS.markdown
+++ b/home-lab/_drafts/2021-07-02-PopOS.markdown
@@ -64,9 +64,13 @@ This is the time required on compile and run the Signel android app
 
 https://github.com/signalapp/Signal-Android
 
+NUC
 2:15.98
 2:14.39
 2:21.16
+
+AMD windows 
+1:20
 
 ## Reference
 
